# Elimu-Research-Assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_EDUCATORS.md  MANIFEST.in  README.md  TODOS.txt  __init__.py  cli.py  elimu_entry.py  main.py  pyproject.toml  requirements.txt  sample_educational_output.md  setup.py  streamlit_app.py  tasks.txt
.github/workflows/: publish.yml
.streamlit/: secrets.toml.example
agent/: agent.py  comprehension.py  planner.py
config/: config.py  config_manager.py
elimu_react/: __init__.py  agent.py  llm.py
elimu_react/tools/: __init__.py  base.py  scrape.py  search.py
results/: result_elimu_search_Develop_a_case_st.md  task_10_result.md  task_1_result.md  task_2_result.md  task_3_result.md  task_4_result.md  task_5_result.md  task_6_result.md  task_7_result.md  task_8_result.md  task_9_result.md
scripts/: bump_version.py
tools/: presentation_tool.py  search.py
utils/: console_ui.py  react_output.py
utils/formatters/: formatters.py
